--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
+  - title: "PhD Students Recruitment"
+    url: "/#-phd-students-recruitment"
+
   - title: "News"
     url: "/#-news"
 
@@ -20,3 +23,6 @@ main:
 
   - title: "Internships"
     url: "/#-internships"
+
+  - title: "Working Experience"
+    url: "/#-working-experience"
