--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,8 +21,5 @@ main:
   - title: "Invited Talks"
     url: "/#-invited-talks"
 
-  - title: "Internships"
+  - title: "Experience"
     url: "/#-internships"
-
-  - title: "Working Experience"
-    url: "/#-working-experience"
