--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # Site Settings
 title                    : "Meng Ye"
 description              : "PhD candidate in Rutgers Computer Science. In coming Assistant Professor of Computer Science Engineering in UT Alington. "
-repository               : "mengye/acad-homepage.github.io"
+repository               : "DeepTag/DeepTag.github.io"
 google_scholar_stats_use_cdn : true
 
 # google analytics
@@ -37,7 +37,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : # e.g., "github username"
+  github           : "DeepTag"
   google_plus      :
   keybase          :
   instagram        :
