--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Meng Ye"
-  avatar           : "images/MengYe.jpg"
+  avatar           : "images/android-chrome-192x192.png"
   bio              : "Rutgers Univeristy"
   location         : "NJ, US"
   employer         :
