--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Meng Ye"
-description              : "AI for healthcare"
+description              : "The real voyage of dicovery consists, not in seeking new landscapes, but in having new eyes. -- Marcel Proust"
 repository               : "DeepTag/DeepTag.github.io"
 google_scholar_stats_use_cdn : true
 
