--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Meng Ye"
   avatar           : "images/android-chrome-192x192.png"
-  bio              : "Incoming AP of CSE at UT Arlington"
+  bio              : "Assistant Professor of CSE at UT Arlington"
   location         : "NJ, US"
   employer         :
   pubmed           : 
