--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,7 +2,10 @@
 main:
   - title: "About Me"
     url: "/#about-me"
-
+    
+  - title: "Group Members"
+    url: "/#-group-members"
+    
   - title: "PhD Students Recruitment"
     url: "/#-phd-students-recruitment"
 
