--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Meng Ye"
   avatar           : "images/android-chrome-192x192.png"
   bio              : "Assistant Professor of CSE at UT Arlington"
-  location         : "NJ, US"
+  location         : "TX, US"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=3Oerk1cAAAAJ&hl=en"
