--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : "TX, US"
   employer         :
   pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=3Oerk1cAAAAJ&hl=en"
+  googlescholar    : "https://scholar.google.com/citations?hl=en&user=iYBbF7QAAAAJ" #"https://scholar.google.com/citations?user=3Oerk1cAAAAJ&hl=en"
   email            : "meng.ye@uta.edu"
   researchgate     :  # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
